--- a/D/Base.lproj/Main.storyboard
+++ b/D/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="HUN-lU-pb1">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -133,19 +134,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="400" height="125"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lotsa lotsa lotsa text alj aie akwej awue lobi oilb k serbafkjshbf iluhse ijher kjn gswer uijngs." lineBreakMode="clip" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UVV-cp-3gz">
-                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                            <animations/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                            <variation key="widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="8" y="24" width="276" height="93"/>
-                                            </variation>
-                                            <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="25" y="24" width="276" height="93"/>
-                                            </variation>
-                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Os-IN-qyX">
                                             <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                             <animations/>
@@ -154,9 +142,6 @@
                                             <nil key="highlightedColor"/>
                                             <variation key="widthClass=compact" fixedFrame="YES">
                                                 <rect key="frame" x="24" y="8" width="42" height="21"/>
-                                            </variation>
-                                            <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="8" y="8" width="143" height="21"/>
                                             </variation>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKB-F8-hfn">
@@ -168,8 +153,21 @@
                                             <variation key="widthClass=compact" fixedFrame="YES">
                                                 <rect key="frame" x="182" y="8" width="102" height="21"/>
                                             </variation>
-                                            <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="217" y="8" width="102" height="21"/>
+                                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                <rect key="frame" x="232" y="8" width="160" height="21"/>
+                                            </variation>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lotsa lotsa lotsa text alj aie akwej awue lobi oilb k serbafkjshbf iluhse ijher kjn gswer uijngs." lineBreakMode="clip" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UVV-cp-3gz">
+                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                            <animations/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                            <variation key="widthClass=compact" fixedFrame="YES">
+                                                <rect key="frame" x="8" y="24" width="276" height="93"/>
+                                            </variation>
+                                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                <rect key="frame" x="8" y="24" width="384" height="93"/>
                                             </variation>
                                         </label>
                                     </subviews>
@@ -178,19 +176,50 @@
                                 </view>
                                 <animations/>
                                 <color key="backgroundColor" white="0.41658100329999997" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="topMargin" secondItem="WKB-F8-hfn" secondAttribute="top" id="8dA-c2-RSZ"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="UVV-cp-3gz" secondAttribute="trailing" id="Is8-YP-cpV"/>
+                                    <constraint firstItem="UVV-cp-3gz" firstAttribute="centerY" secondItem="yme-rF-U1e" secondAttribute="centerY" constant="-13" id="OaA-M1-28z">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="8"/>
+                                    </constraint>
+                                    <constraint firstAttribute="trailingMargin" secondItem="WKB-F8-hfn" secondAttribute="trailing" id="aEi-7T-uSO"/>
+                                    <constraint firstAttribute="topMargin" secondItem="6Os-IN-qyX" secondAttribute="top" id="cx4-Sl-eft"/>
+                                    <constraint firstAttribute="leadingMargin" secondItem="6Os-IN-qyX" secondAttribute="leading" id="gTI-Ci-r4o"/>
+                                    <constraint firstAttribute="leadingMargin" secondItem="UVV-cp-3gz" secondAttribute="leading" id="lMF-de-TDB"/>
+                                </constraints>
                                 <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                 <variation key="default">
                                     <mask key="subviews">
-                                        <exclude reference="UVV-cp-3gz"/>
                                         <exclude reference="6Os-IN-qyX"/>
                                         <exclude reference="WKB-F8-hfn"/>
+                                        <exclude reference="UVV-cp-3gz"/>
+                                    </mask>
+                                    <mask key="constraints">
+                                        <exclude reference="cx4-Sl-eft"/>
+                                        <exclude reference="gTI-Ci-r4o"/>
+                                        <exclude reference="Is8-YP-cpV"/>
+                                        <exclude reference="OaA-M1-28z"/>
+                                        <exclude reference="lMF-de-TDB"/>
+                                        <exclude reference="8dA-c2-RSZ"/>
+                                        <exclude reference="aEi-7T-uSO"/>
                                     </mask>
                                 </variation>
                                 <variation key="widthClass=compact">
                                     <mask key="subviews">
-                                        <include reference="UVV-cp-3gz"/>
                                         <include reference="6Os-IN-qyX"/>
                                         <include reference="WKB-F8-hfn"/>
+                                        <include reference="UVV-cp-3gz"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="cx4-Sl-eft"/>
+                                        <include reference="gTI-Ci-r4o"/>
+                                        <include reference="Is8-YP-cpV"/>
+                                        <include reference="OaA-M1-28z"/>
+                                        <include reference="lMF-de-TDB"/>
+                                        <include reference="8dA-c2-RSZ"/>
+                                        <include reference="aEi-7T-uSO"/>
                                     </mask>
                                 </variation>
                                 <connections>
