--- a/Greip/Base.lproj/Main.storyboard
+++ b/Greip/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="l6d-Ks-N5c">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="l6d-Ks-N5c">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -201,6 +201,7 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Ballerup" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gan-bs-Tsc">
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" calendarEvent="YES"/>
                                     </textView>
                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mEj-ZQ-Qlx">
                                         <rect key="frame" x="24" y="364" width="343" height="58"/>
@@ -228,11 +229,11 @@
                                         <exclude reference="mEj-ZQ-Qlx"/>
                                     </mask>
                                     <mask key="constraints">
+                                        <exclude reference="yae-hg-A3h"/>
                                         <exclude reference="WUF-Vq-j2b"/>
                                         <exclude reference="Xyw-WH-Xjj"/>
                                         <exclude reference="YSH-ai-UME"/>
                                         <exclude reference="YZf-Go-kZv"/>
-                                        <exclude reference="yae-hg-A3h"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
@@ -242,11 +243,11 @@
                                         <include reference="mEj-ZQ-Qlx"/>
                                     </mask>
                                     <mask key="constraints">
+                                        <include reference="yae-hg-A3h"/>
                                         <include reference="WUF-Vq-j2b"/>
                                         <include reference="Xyw-WH-Xjj"/>
                                         <include reference="YSH-ai-UME"/>
                                         <include reference="YZf-Go-kZv"/>
-                                        <include reference="yae-hg-A3h"/>
                                     </mask>
                                 </variation>
                             </scrollView>
@@ -263,8 +264,8 @@
                                 <exclude reference="8Or-xk-947"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="Rqb-Sk-gSb"/>
                                 <exclude reference="25r-70-ugV"/>
+                                <exclude reference="Rqb-Sk-gSb"/>
                                 <exclude reference="uyu-SL-zbO"/>
                                 <exclude reference="vBm-4Y-I5F"/>
                             </mask>
@@ -274,8 +275,8 @@
                                 <include reference="8Or-xk-947"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="Rqb-Sk-gSb"/>
                                 <include reference="25r-70-ugV"/>
+                                <include reference="Rqb-Sk-gSb"/>
                                 <include reference="uyu-SL-zbO"/>
                                 <include reference="vBm-4Y-I5F"/>
                             </mask>
